--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/index.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/index.html
@@ -24,7 +24,7 @@
         <th>View</th>
     </tr>
     </thead>
-    <tbody>
+    <body>
     <tr th:each="row,rowStat : ${customers}">
         <td th:text="${row.customerName}"></td>
         <td th:text="${row.customerEmail}"></td>
@@ -33,7 +33,7 @@
         <td><a th:href="@{/customers/{id}/delete(id=${row.customerId})}">delete</a></td>
         <td><a th:href="@{/customers/{id}/view(id=${row.customerId})}">view</a></td>
     </tr>
-    </tbody>
+    </body>
 </table>
 <footer th:replace="/layout :: footer"></footer>
 </body>
