--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/view.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/view.html
@@ -14,15 +14,15 @@
 <div id="detail">
     <div class="cus-detail">
         <label>Name:</label>
-        <label th:text="${customer.customerName}"></label>
+        <label th:text="${customer.name}"></label>
     </div>
     <div class="cus-detail">
         <label>Email:</label>
-        <label th:text="${customer.customerEmail}"></label>
+        <label th:text="${customer.email}"></label>
     </div>
     <div class="cus-detail">
         <label>Address:</label>
-        <label th:text="${customer.customerAddress}"></label>
+        <label th:text="${customer.address}"></label>
     </div>
 </div>
 <footer th:replace="/layout :: footer"></footer>
