--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/delete.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/delete.html
@@ -13,18 +13,18 @@
 <div id="form">
     <form action="#" th:action="@{/customers/delete}" th:object="${customer}"
           method="POST" novalidate="novalidate">
-        <input type="hidden" th:field="*{customerId}"/>
+        <input type="hidden" th:field="*{id}"/>
         <div>
             <label for="name">Name</label>
-            <input type="text" id="name" th:field="*{customerName}"/>
+            <input type="text" id="name" th:field="*{name}"/>
         </div>
         <div>
             <label for="email">Email</label>
-            <input type="email" id="email" th:field="*{customerEmail}"/>
+            <input type="email" id="email" th:field="*{email}"/>
         </div>
         <div>
             <label for="address">Address</label>
-            <input type="text" id="address" th:field="*{customerAddress}"/>
+            <input type="text" id="address" th:field="*{address}"/>
         </div>
         <input type="submit" value="Remove"/>
     </form>
