--- a/ss3/ung-dung-quan-ly-san-pham/ung-dung-quan-ly-san-pham/src/main/webapp/WEB-INF/views/add-form.html
+++ b/ss3/ung-dung-quan-ly-san-pham/ung-dung-quan-ly-san-pham/src/main/webapp/WEB-INF/views/add-form.html
@@ -5,10 +5,18 @@
     <title>Add New Product</title>
 </head>
 <body>
-<form th:action="@{/products/add}" method="post" th:object="product">
+<form th:action="@{/products/add}" method="post" th:object="${product}">
     <label for="id">Product ID: </label>
-    <input type="text" id="id" th:field="*{id}">
-
+    <input type="text" id="id" th:field="*{id}"><br>
+    <label for="name">Product Name: </label>
+    <input type="text" id="name" th:field="*{name}"><br>
+    <label for="price">Product Price: </label>
+    <input type="number" id="price" th:field="*{price}"><br>
+    <label for="description">Product Description: </label>
+    <input type="text" id="description" th:field="*{description}"><br>
+    <label for="producer">Product Producer: </label>
+    <input type="text" id="producer" th:field="*{producer}"><br>
+    <button type="submit">Add New Product</button>
 </form>
 </body>
 </html>
