--- a/ss3/ung-dung-quan-ly-san-pham/ung-dung-quan-ly-san-pham/src/main/webapp/WEB-INF/views/edit-form.html
+++ b/ss3/ung-dung-quan-ly-san-pham/ung-dung-quan-ly-san-pham/src/main/webapp/WEB-INF/views/edit-form.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Edit Product</title>
 </head>
 <body>
-$END$
+<form th:action="@{/products/edit}" method="post" th:object="${product}">
+    <input type="hidden" id="id" th:field="*{id}"><br>
+    <label for="name">Product Name: </label>
+    <input type="text" id="name" th:field="*{name}"><br>
+    <label for="price">Product Price: </label>
+    <input type="number" id="price" th:field="*{price}"><br>
+    <label for="description">Product Description: </label>
+    <input type="text" id="description" th:field="*{description}"><br>
+    <label for="producer">Product Producer: </label>
+    <input type="text" id="producer" th:field="*{producer}"><br>
+    <button type="submit">Edit Product</button>
+</form>
 </body>
 </html>
