--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/update.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/update.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
-<html lang="en">
 <head th:replace="/layout :: head">
     <title>UpdateCustomer</title>
 </head>
@@ -12,20 +11,20 @@
     </a>
 </p>
 <div id="form">
-    <form action="#" th:action="@{/customers/update}" th:object="${customer}"
-          method="POST" novalidate="novalidate">
-        <input type="hidden" th:field="*{customerId}"/>
+    <form th:action="@{/customers/update}" th:object="${customer}"
+          method="POST">
+        <input type="hidden" th:field="*{id}"/>
         <div>
             <label for="name">Name</label>
-            <input type="text" id="name" th:field="*{customerName}"/>
+            <input type="text" id="name" th:field="*{name}"/>
         </div>
         <div>
             <label for="email">Email</label>
-            <input type="email" id="email" th:field="*{customerEmail}"/>
+            <input type="email" id="email" th:field="*{email}"/>
         </div>
         <div>
             <label for="address">Address</label>
-            <input type="text" id="address" th:field="*{customerAddress}"/>
+            <input type="text" id="address" th:field="*{address}"/>
         </div>
         <input type="submit" value="Edit"/>
     </form>
