--- a/ss10/shopping-cart/shopping-cart/src/main/webapp/WEB-INF/views/cart.html
+++ b/ss10/shopping-cart/shopping-cart/src/main/webapp/WEB-INF/views/cart.html
@@ -34,8 +34,13 @@
             <td>Total</td>
             <td></td>
             <td th:text="${cart.countTotalPayment()}"></td>
+            <td></td>
         </tr>
+
     </table>
 </form>
+<p>
+    <a th:href="@{/buy}">Buy All</a>
+</p>
 </body>
 </html>
