--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/create.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/create.html
@@ -2,13 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
 <head th:replace="/layout :: head">
-    <title>CreateCustomer</title>
+</head>
+<head>
+    <title th:text="#{title.create}"></title>
 </head>
 <body>
-<h3>Add Customer</h3>
+<div th:replace="/layout :: language"></div>
+<h3 th:text="#{title.create}"></h3>
 <p>
-    <a th:href="@{/customers}">
-        Back to customer list
+    <a th:href="@{/customers}" th:text="#{back-to-customer-list.button}">
     </a>
 </p>
 <div id="form">
@@ -16,18 +18,18 @@
           method="POST" novalidate="novalidate">
         <input type="hidden" th:field="*{id}"/>
         <div>
-            <label for="name">Name</label>
+            <label for="name" th:text="#{customer.name}">Name</label>
             <input type="text" id="name" th:field="*{name}"/>
         </div>
         <div>
-            <label for="email">Email</label>
+            <label for="email" th:text="#{customer.email}">Email</label>
             <input type="email" id="email" th:field="*{email}"/>
         </div>
         <div>
-            <label for="address">Address</label>
+            <label for="address" th:text="#{customer.address}">Address</label>
             <input type="text" id="address" th:field="*{address}"/>
         </div>
-        <input type="submit" value="Save"/>
+        <input type="submit" th:value="#{title.create}"/>
     </form>
 </div>
 <footer th:replace="/layout :: footer"></footer>
