--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/error.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/error.html
@@ -2,10 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
 <head th:replace="/layout :: head">
-    <title>Error</title>
 </head>
-
+<head>
+    <title th:text="#{title.error}"></title>
+</head>
 <body>
-<h1>Error, there something wrongs</h1>
+<div th:replace="/layout :: language"></div>
+<h1 th:text="#{error.common}"></h1>
 </body>
 </html>
