--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/index.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/index.html
@@ -2,31 +2,31 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
 <head th:replace="/layout :: head">
-    <title>ListCustomer</title>
 </head>
-
+<head>
+    <title th:text="#{title.index}"></title>
+</head>
 <body>
-<h3>Customers</h3>
+<div th:replace="/layout :: language"></div>
+<h3 th:text="#{title.index}"></h3>
 <p>
-    <a th:href="@{/customers/create}">
-        Add new customer
-    </a>
+    <a th:href="@{/customers/create}" th:text="#{title.create}"></a>
 </p>
 <div style="margin-bottom: 10px; margin-left: 110px">
     <form th:action="@{/customers/search}" method="get">
         <label><input type="text" name="search" th:value="${search}"></label>
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-primary" th:text="#{search.button}"></button>
     </form>
 </div>
 <table id="customers">
     <thead>
     <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Address</th>
-        <th>Edit</th>
-        <th>Delete</th>
-        <th>View</th>
+        <th th:text="#{column.customer.name}"></th>
+        <th th:text="#{column.customer.email}"></th>
+        <th th:text="#{column.customer.address}"></th>
+        <th th:text="#{edit.button}"></th>
+        <th th:text="#{delete.button}"></th>
+        <th th:text="#{view.button}"></th>
     </tr>
     </thead>
     <body>
@@ -34,18 +34,18 @@
         <td th:text="${row.name}"></td>
         <td th:text="${row.email}"></td>
         <td th:text="${row.address}"></td>
-        <td><a th:href="@{/customers/{id}/edit(id=${row.id})}">edit</a></td>
-        <td><a th:href="@{/customers/{id}/delete(id=${row.id})}">delete</a></td>
-        <td><a th:href="@{/customers/{id}/view(id=${row.id})}">view</a></td>
+        <td><a th:href="@{/customers/{id}/edit(id=${row.id})}" th:text="#{edit.button}"></a></td>
+        <td><a th:href="@{/customers/{id}/delete(id=${row.id})}" th:text="#{delete.button}"></a></td>
+        <td><a th:href="@{/customers/{id}/view(id=${row.id})}" th:text="#{view.button}"></a></td>
     </tr>
     </body>
 </table>
 <div>
     <a class="btn btn-primary" th:if="${customers.hasPrevious()}"
-       th:href="@{/customers/search(page=${customers.number - 1}, search=${search})}">Previous</a>
+       th:href="@{/customers/search(page=${customers.number - 1}, search=${search})}" th:text="#{previous.page}"></a>
     <span th:text="${customers.number + 1}"></span> | <span th:text="${customers.totalPages}"></span>
     <a class="btn btn-primary" th:if="${customers.hasNext()}"
-       th:href="@{/customers/search(page=${customers.number + 1}, search=${search})}">Next</a>
+       th:href="@{/customers/search(page=${customers.number + 1}, search=${search})}" th:text="#{next.page}"></a>
 </div>
 <footer th:replace="/layout :: footer"></footer>
 </body>
