--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/update.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/update.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="/layout :: head">
-    <title>UpdateCustomer</title>
+</head>
+<head>
+    <title th:text="#{title.edit}"></title>
 </head>
 <body>
-<h3>Edit Customer</h3>
+<div th:replace="/layout :: language"></div>
+<h3 th:text="#{title.edit}"></h3>
 <p>
-    <a th:href="@{/customers}">
-        Back to customer list
-    </a>
+    <a th:href="@{/customers}" th:text="#{back-to-customer-list.button}"></a>
 </p>
 <div id="form">
     <form th:action="@{/customers/update}" th:object="${customer}"
           method="POST">
         <input type="hidden" th:field="*{id}"/>
         <div>
-            <label for="name">Name</label>
+            <label for="name" th:text="#{customer.name}"></label>
             <input type="text" id="name" th:field="*{name}"/>
         </div>
         <div>
-            <label for="email">Email</label>
+            <label for="email" th:text="#{customer.email}"></label>
             <input type="email" id="email" th:field="*{email}"/>
         </div>
         <div>
-            <label for="address">Address</label>
+            <label for="address" th:text="#{customer.address}"></label>
             <input type="text" id="address" th:field="*{address}"/>
         </div>
-        <input type="submit" value="Edit"/>
+        <input type="submit" th:value="#{title.edit}"/>
     </form>
 </div>
 <footer th:replace="/layout :: footer"></footer>
