--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/view.html
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/src/main/webapp/WEB-INF/views/view.html
@@ -2,26 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <html lang="en">
 <head th:replace="/layout :: head">
-    <title>DetailCustomer</title>
+</head>
+<head>
+    <title th:text="#{title.view}"></title>
 </head>
 <body>
-<h3>View Customer</h3>
+<div th:replace="/layout :: language"></div>
+<h3 th:text="#{title.view}"></h3>
 <p>
-    <a th:href="@{/customers}">
-        Back to customer list
-    </a>
+    <a th:href="@{/customers}" th:text="#{back-to-customer-list.button}"></a>
 </p>
 <div id="detail">
     <div class="cus-detail">
-        <label>Name:</label>
+        <label th:text="#{customer.name}"></label>
         <label th:text="${customer.name}"></label>
     </div>
     <div class="cus-detail">
-        <label>Email:</label>
+        <label th:text="#{customer.email}"></label>
         <label th:text="${customer.email}"></label>
     </div>
     <div class="cus-detail">
-        <label>Address:</label>
+        <label th:text="#{customer.address}"></label>
         <label th:text="${customer.address}"></label>
     </div>
 </div>
